Set ci TEST_STATUS on test failure

--- a/.github/workflows/system_test.yml
+++ b/.github/workflows/system_test.yml
@@ -127,15 +127,15 @@ jobs:
         run: |
           echo "*** Exiting and removing Docker containers and network ..."
           docker compose -f .ci/docker/docker-compose-system-test.yml down -v
-          if [[ ${TEST_STATUS} == "0" ]]; then
-            echo "******** SUCCESS: System Tests for TPM 2.0 passed ********"
-            echo "TEST_STATUS=0" >> $GITHUB_ENV
-            exit 0;
-          else
-            echo "******** FAILURE: System Tests for TPM 2.0 failed ********"
-            echo "TEST_STATUS=1" >> $GITHUB_ENV
-            exit 1
-          fi
+          #if [[ ${TEST_STATUS} == "0" ]]; then
+          #  echo "******** SUCCESS: System Tests for TPM 2.0 passed ********"
+          #  echo "TEST_STATUS=0" >> $GITHUB_ENV
+          #  exit 0;
+          #else
+          #  echo "******** FAILURE: System Tests for TPM 2.0 failed ********"
+          #  echo "TEST_STATUS=1" >> $GITHUB_ENV
+          #  exit 1
+          #fi
       - name: Archive System Test Log files
         uses: actions/upload-artifact@v4
         with:
@@ -146,7 +146,9 @@ jobs:
         if: success() || failure()
         run: |
           if [ ${TEST_STATUS} == "0" ]; then
+            echo "******** SUCCESS: System Tests for TPM 2.0 passed ********"
             exit 0;
           else
+            echo "******** FAILURE: System Tests for TPM 2.0 failed ********"
             exit 1;
           fi
