--- a/.github/workflows/rim_tests.yml
+++ b/.github/workflows/rim_tests.yml
@@ -38,7 +38,14 @@ jobs:
           sudo dpkg -i tools/tcg_rim_tool/build/distributions/tcg-rim-tool*.deb
       - name: RIM tests
         run: | 
-          ./.ci/tcg-rim-tool/scripts/run_all_tests.sh --verbose
+          ./.ci/tcg-rim-tool/scripts/run_all_tests.sh
+      - name: Run verbose for logs
+        working-directory: .ci/tcg-rim-tool/scripts
+        run: |
+          ./run_all_tests.sh > log/tcg-rim-results.log
+      - name: Uploading logs
+        uses: actions/upload-artifacts@v4
+        path: .ci/tcg-rim-tool/scripts/log/*.log
 
 
 
