--- a/.github/workflows/rim_tests.yml
+++ b/.github/workflows/rim_tests.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Run verbose for logs
         working-directory: .ci/tcg-rim-tool/scripts
         run: |
+          mkdir log
           ./run_all_tests.sh > log/tcg-rim-results.log
       - name: Uploading logs
         uses: actions/upload-artifact@v2
