--- a/.github/workflows/rim_tests.yml
+++ b/.github/workflows/rim_tests.yml
@@ -42,13 +42,14 @@ jobs:
       - name: Run verbose for logs
         working-directory: .ci/tcg-rim-tool/scripts
         run: |
-          mkdir log
-          ./run_all_tests.sh --verbose > log/tcg-rim-results.log
+          logName="tcg-rim-tool-results.log"
+          ./run_all_tests.sh --verbose > $logName
       - name: Uploading logs
         uses: actions/upload-artifact@v4
         with:
           name: tcg-rim-tool-results
           path: .ci/tcg-rim-tool/scripts/log/*.log
+                .ci/tcg-rim-tool/configs/Base_Rim_Config.json
 
 
 
