--- a/.github/workflows/rim_tests.yml
+++ b/.github/workflows/rim_tests.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Run verbose for logs
         working-directory: .ci/tcg-rim-tool/scripts
         run: |
-          logName="tcg-rim-tool-results.log"
-          ./run_all_tests.sh --verbose > $logName
+          mkdir log
+          ./run_all_tests.sh --verbose > log/tcg-rim-results.log
       - name: Uploading logs
         uses: actions/upload-artifact@v4
         with:
